--- a/index.html
+++ b/index.html
@@ -419,6 +419,8 @@
             </form>
           </div><!-- End Contact Form -->
 
+        <br>
+
           <div class="text-center">
             <h5>Download my resume</h5>
             <br>
@@ -447,7 +449,7 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright 2024</span> <strong class="px-1 sitename">Abdellah Agnaou</strong> <span>All Rights Reserved</span></p>
+        <p>© <span>Copyright 2024 by</span> <strong class="px-1 sitename">Abdellah Agnaou</strong> <span>All Rights Reserved</span></p>
       </div>
 
     </div>
