--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       <a href="https://github.com/abdellah20015" class="twitter"><i class="bi bi-github"></i></a>
       <a href="https://www.linkedin.com/in/abdellah-agnaou-230884251" class="linkedin"><i class="bi bi-linkedin"></i></a>
       <a href="https://www.facebook.com/abdellah.agnaou.967" class="facebook"><i class="bi bi-facebook"></i></a>
+      <a href="https://wa.me/212637451036" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
