--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       <a href="https://www.linkedin.com/in/abdellah-agnaou-230884251" class="linkedin"><i class="bi bi-linkedin"></i></a>
       <a href="https://www.facebook.com/abdellah.agnaou.967" class="facebook"><i class="bi bi-facebook"></i></a>
       <a href="https://wa.me/212637451036" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
+      <a href="mailto:abdellahagnaou29062001@gmail.com" class="gmail"><i class="bi bi-envelope"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
