--- a/index.html
+++ b/index.html
@@ -27,13 +27,7 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: iPortfolio
-  * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
-  * Updated: Jun 29 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+
 </head>
 
 <body class="index-page">
@@ -65,6 +59,7 @@
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
+        <li><a href="#download"><i class="bi bi-download navicon"></i> Download</a></li>
       </ul>
     </nav>
 
@@ -420,30 +415,41 @@
               </div>
             </form>
           </div><!-- End Contact Form -->
-
-        <br>
-
-          <div class="text-center">
-            <h5>Download my resume</h5>
-            <br>
-            <a href="CV_Abdellah_Agnaou.pdf" class="btn-download" download><i class="fas fa-download"></i>Download</a>
-        </div>
-        <style>
-          .btn-download {
-            background-color: #304add;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-          }
-        </style>
-
-        </div>
-
-      </div>
-
     </section><!-- /Contact Section -->
+
+
+    <!-- Download Section -->
+<section id="download" class="download section">
+
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Download My Resume</h2>
+  </div><!-- End Section Title -->
+
+  <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
+    <h5>Click the button below to download my resume:</h5>
+    <br>
+    <a href="CV_Abdellah_Agnaou.pdf" class="btn-download" download><i class="fas fa-download"></i> Download</a>
+  </div>
+
+</section><!-- End Download Section -->
+
+<!-- CSS for Download Button -->
+<style>
+  .btn-download {
+    background-color: #304add;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
+
+  .btn-download:hover {
+    background-color: #203399;
+  }
+</style>
+
 
   </main>
 
