--- a/index.html
+++ b/index.html
@@ -411,62 +411,10 @@
       </div>
 
       <div class="col-md-12 text-center">
-        <button type="submit" id="submitButton">Send Message</button>
+        <button type="submit"> Send Message</button>
       </div>
 
-      <div class="col-md-12 text-center mt-3">
-        <div id="successMessage" class="success-message">
-          <i class="fas fa-check-circle"></i> Your message has been sent successfully!
-        </div>
-      </div>
-
-    </div>
-  </form>
-</div>
-
-<!-- JavaScript to handle form submission -->
-<script>
-  const form = document.getElementById('contactForm');
-  const successMessage = document.getElementById('successMessage');
-
-  form.addEventListener('submit', function (event) {
-    event.preventDefault();
-
-    fetch(form.action, {
-      method: 'POST',
-      body: new FormData(form),
-    })
-    .then(response => {
-      if (response.ok) {
-        successMessage.style.display = 'block';
-        form.reset();
-      } else {
-        alert('There was an error sending your message. Please try again.');
-      }
-    })
-    .catch(error => {
-      console.error('Error:', error);
-      alert('There was an error sending your message. Please try again.');
-    });
-  });
-</script>
-
-<!-- CSS for Success Message -->
-<style>
-  .success-message {
-    display: none;
-    color: #28a745;
-    font-size: 1rem;
-    font-weight: bold;
-    margin-top: 15px;
-  }
-
-  .success-message i {
-    margin-right: 5px;
-  }
-</style>
-
-                
+              
 
               </div>
             </form>
