--- a/index.html
+++ b/index.html
@@ -389,31 +389,37 @@
   <div class="col-lg-7">
   <form action="https://formspree.io/f/movjozjr" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200" id="contactForm">
     <div class="row gy-4">
-
       <div class="col-md-6">
-        <label for="firstName" class="form-label"><i class="fas fa-user"></i>First Name</label>
+        <label for="firstName" class="form-label"><i class="fas fa-user"></i> First Name</label>
         <input type="text" class="form-control" id="firstName" name="firstName" required>
       </div>
 
       <div class="col-md-6">
-        <label for="lastName" class="form-label"><i class="fas fa-user"></i>Last Name</label>
+        <label for="lastName" class="form-label"><i class="fas fa-user"></i> Last Name</label>
         <input type="text" class="form-control" id="lastName" name="lastName" required>
       </div>
 
       <div class="col-md-12">
-        <label for="subject" class="form-label"><i class="fas fa-tag"></i>Subject</label>
+        <label for="subject" class="form-label"><i class="fas fa-tag"></i> Subject</label>
         <input type="text" class="form-control" id="subject" name="subject" required>
       </div>
 
       <div class="col-md-12">
-        <label for="message" class="form-label"><i class="fas fa-comment"></i>Message</label>
+        <label for="message" class="form-label"><i class="fas fa-comment"></i> Message</label>
         <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
       </div>
 
-      <div class="col-md-12 text-center">
-        <button type="submit"> Send Message</button>
-      </div>
+      <!-- Add these missing elements -->
+      <div class="loading" style="display: none;">Loading...</div>
+      <div class="error-message" style="display: none;"></div>
+      <div class="sent-message" style="display: none;">Your message has been sent. Thank you!</div>
 
+      <div class="col-md-12 text-center">
+        <button type="submit">Send Message</button>
+      </div>
+    </div>
+  </form>
+</div>
               
 
               </div>
@@ -452,6 +458,32 @@
   .btn-download:hover {
     background-color: #203399;
   }
+
+  .php-email-form .loading {
+  display: none;
+  text-align: center;
+  padding: 15px;
+  background: #f3f3f3;
+  color: #666;
+}
+
+.php-email-form .error-message {
+  display: none;
+  color: #fff;
+  background: #df1529;
+  text-align: center;
+  padding: 15px;
+  font-weight: 600;
+}
+
+.php-email-form .sent-message {
+  display: none;
+  color: #fff;
+  background: #304add;
+  text-align: center;
+  padding: 15px;
+  font-weight: 600;
+}
 </style>
 
 
