--- a/index.html
+++ b/index.html
@@ -507,7 +507,8 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <!-- Add this before your validate.js script -->
+ <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
