--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/abdo.jpeg" alt="" data-aos="fade-in" class="">
+      <img src="" alt="" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Abdellah Agnaou</h2>
