--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/ab.jpeg" class="img-fluid" alt="">
+            <img src="assets/img/ab.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>Web Developer.</h2>
