--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright 2024 by</span> <strong class="px-1 sitename">Abdellah Agnaou</strong> <span>All Rights Reserved</span></p>
+        <p>© <span>Copyright &copy; <script>document.write(new Date().getFullYear())</script>  by</span> <strong class="px-1 sitename">Abdellah Agnaou</strong> <span>All Rights Reserved</span></p>
       </div>
 
     </div>
