--- a/index.html
+++ b/index.html
@@ -71,14 +71,23 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/abd.jpeg" alt="" data-aos="fade-in" class="">
+  <img src="assets/img/abd.jpeg" alt="" data-aos="fade-in" class="">
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h2>Abdellah Agnaou</h2>
-        <p>I'm <span class="typed" data-typed-items="Developer Web, Developer AI">Developer Web</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
-      </div>
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
+    <h2>Abdellah Agnaou</h2>
+    <p>I'm <span class="typed" data-typed-items="Developer Web, Developer AI">Developer Web</span>
+      <span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span>
+      <span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span>
+    </p>
 
-    </section><!-- /Hero Section -->
+    <div class="mt-4">
+      <a href="assets/CV_Abdellah_Agnaou.pdf" class="btn btn-primary" download>Download CV</a>
+      <a href="#contact" class="btn btn-secondary">Contact Me</a>
+    </div>
+  </div>
+
+</section><!-- /Hero Section -->
+
 
     <!-- About Section -->
     <section id="about" class="about section">
@@ -171,13 +180,6 @@
               <span class="skill"><span>Java/Python</span> <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>Bootstrap</span> <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
