--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <main class="main">
 
     <!-- Hero Section -->
-    <section id="hero" class="hero section dark-background">
+    <section id="hero" class="hero section dark-background text-center">
 
   <img src="assets/img/abd.jpeg" alt="" data-aos="fade-in" class="">
 
@@ -80,13 +80,14 @@
       <span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span>
     </p>
 
-    <div class="mt-4">
-      <a href="assets/CV_Abdellah_Agnaou.pdf" class="btn btn-primary" download>Download CV</a>
-      <a href="#contact" class="btn btn-secondary">Contact Me</a>
+    <div class="mt-4 d-flex justify-content-center gap-3">
+      <a href="assets/CV_Abdellah_Agnaou.pdf" class="btn btn-lg btn-primary px-4" download>Download CV</a>
+      <a href="#contact" class="btn btn-sm btn-secondary px-3">Contact Me</a>
     </div>
   </div>
 
 </section><!-- /Hero Section -->
+
 
 
     <!-- About Section -->
