--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
-        <li><a href="#download"><i class="bi bi-download navicon"></i> Download</a></li>
       </ul>
     </nav>
 
@@ -81,8 +80,8 @@
     </p>
 
     <div class="mt-4 d-flex justify-content-center gap-3">
-      <a href="assets/CV_Abdellah_Agnaou.pdf" class="btn btn-lg btn-primary px-4" download>Download CV</a>
-      <a href="#contact" class="btn btn-sm btn-secondary px-4">Contact Me</a>
+      <a href="CV_Abdellah_Agnaou.pdf" class="btn btn-lg btn-primary px-4" download>Download CV</a>
+      <a href="#contact" class="btn btn-lg btn-secondary px-4">Contact Me</a>
     </div>
   </div>
 
@@ -284,6 +283,11 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Academic Projects</h3>
+
+            <div class="resume-item">
+              <h4>RH Management</h4>
+              <h5>Vue.js / Vert.Xx(Java) / MongoDB</h5>
+            </div><!-- End Resume Item -->
           
             <div class="resume-item">
               <h4>Tourism Management</h4>
@@ -452,21 +456,6 @@
     </section><!-- /Contact Section -->
 
 
-    <!-- Download Section -->
-<section id="download" class="download section">
-
-  <!-- Section Title -->
-  <div class="container section-title" data-aos="fade-up">
-    <h2>Download My Resume</h2>
-  </div><!-- End Section Title -->
-
-  <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
-    <h5>Click the button below to download my resume:</h5>
-    <br>
-    <a href="CV_Abdellah_Agnaou.pdf" class="btn-download" download><i class="fas fa-download"></i> Download</a>
-  </div>
-
-</section><!-- End Download Section -->
 
 <!-- CSS for Download Button -->
 <style>
