--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
             <div class="resume-item">
               <h4>RH Management</h4>
-              <h5>Vue.js / Vert.Xx(Java) / MongoDB</h5>
+              <h5>Vue.js / Vert.x(Java) / MongoDB</h5>
             </div><!-- End Resume Item -->
           
             <div class="resume-item">
